--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,5 +15,5 @@ repos:
           - --indent=2
           - --no-sort-keys
       - id: check-merge-conflict
-      - id: check-yaml
-        exclude: .github/workflows/java-ci-with-maven.yml
+#  - id: check-yaml
+#    exclude: .github/workflows/java-ci-with-maven.yml
